<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="eduardocruz.mydocuments.CriarLogin"
    tools:showIn="@layout/activity_criar_login"
    android:background="@color/color_criarLogin_background">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_CriarLogin_nome"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_CriarLogin_nome_completo"
        android:fontFamily="casual"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:textColorHint="@color/colorAccent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_CriarLogin_login"
        android:layout_below="@+id/editText_CriarLogin_nome"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_CriarLogin_login"
        android:fontFamily="casual"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textColorHint="@color/colorAccent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_CriarLogin_senha"
        android:layout_below="@+id/editText_CriarLogin_login"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_CriarLogin_senha"
        android:fontFamily="casual"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textColorHint="@color/colorAccent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText_CriarLogin_confSenha"
        android:layout_below="@+id/editText_CriarLogin_senha"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_CriarLogin_confirmar_senha"
        android:fontFamily="casual"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:singleLine="true"
        android:textColorHint="@color/colorAccent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_concluir"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/color_login_background_textfield"
        android:layout_marginBottom="10dp"/>


    <!-- Mensagem de erro -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView_CriarLogin_error"
        android:layout_below="@+id/editText_CriarLogin_confSenha"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:textColor="@color/color_login_error_mesage"/>


</RelativeLayout>
