<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eduardocruz.mydocuments.Login"
    android:background="@color/color_login_background">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/home_logo"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:fontFamily="casual"
        android:layout_marginTop="35dp"
        android:background="@color/color_login_background_textfield"
        android:layout_marginLeft="5dp"
        android:paddingTop="13dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:hint="@string/hint_login_login"
        android:singleLine="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:textSize="22dp"
        android:fontFamily="casual"
        android:background="@color/color_login_background_textfield"
        android:paddingTop="13dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="5dp"
        android:hint="@string/hint_login_senha"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:singleLine="true"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_login_manter_conectado"
        android:id="@+id/checkBox"
        android:fontFamily="casual"
        android:textSize="18dp"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_marginTop="10dp"/>

    <!-- Mensagem de erro -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_below="@+id/checkBox"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:textColor="@color/color_login_error_mesage"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_login_criar_conta"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/color_login_background_textfield"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_btn_login_entrar"
        android:id="@+id/button2"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/color_login_background_textfield"
        android:layout_marginBottom="10dp"/>
</RelativeLayout>
